# cayleypy

./: .gitignore  JAX_TPU_OPTIMIZATIONS.md  benchmark_jax_optimizations.py  colab.ipynb  compare_n10_performance.py  focused_gpu_analysis.py  gpu_bfs_optimization_analysis.py  minimal_hasher_test.py  minimal_test.py  performance_test.py  pyproject.toml  simple_test.py  test_hasher.py  test_hasher_simple.py  test_isin_empty.py  test_isin_fix.py  test_jax_import.py  test_jax_optimizations.py  tpu_bfs_comprehensive_analysis.md  tpu_bfs_performance_analysis.md  tpu_bfs_performance_optimization_plan.md  tpu_bfs_test_results_summary.md
.kiro/: design.md  requirements.md  tasks.md
.kiro/specs/: tasks.md
.kiro/specs/cayleypy-jax-tpu-conversion/: design.md  requirements.md  tasks.md
.kiro/specs/jax-acceleration/: design.md  requirements.md  tasks.md
.kiro/specs/jax-tpu-acceleration/: design.md  requirements.md  tasks.md
.kiro/specs/tpu-bfs-optimization/: design.md  requirements.md  tasks.md
.kiro/steering/: cayleypy-conventions.md  hybrid-architecture.md  jax-development.md  product.md  structure.md  tech.md
cayleypy/: __init__.py  bfs_result.py  bfs_result_test.py  cayley_graph.py  jax_cayley_graph.py  jax_device_integration_test.py  jax_device_manager.py  jax_device_manager_test.py  jax_generators.py  jax_hash_set.py  jax_hash_set_test.py  jax_hasher.py  jax_hasher_test.py  jax_optimization_test.py  jax_string_encoder.py  jax_string_encoder_test.py  jax_tensor_ops.py  jax_tensor_ops_test.py  nnx_backend.py  nnx_backend_test.py  nnx_hasher.py  nnx_hasher_test.py  nnx_tensor_ops.py  nnx_tensor_ops_test.py  run_tpu_bfs_validation.py  test_tpu_bfs_correctness.py  test_tpu_extreme_performance.py  test_tpu_large_graph_performance.py  test_tpu_large_n_performance.py  test_tpu_optimal_performance.py  tpu_backend.py  tpu_backend_test.py  tpu_beam_search.py  tpu_bfs.py  tpu_bfs_benchmark_test.py  tpu_bfs_bitmask.py  tpu_bfs_test.py  tpu_bfs_validation_test.py  tpu_hasher.py  tpu_hasher_test.py  (+3 more)
cayleypy/utils/: dependency_manager.py
docs/: CayleyPy.md  jax_device_management.md
examples/: jax_device_example.py  jax_tensor_operations_example.py
notebooks/: .gitignore  01_getting_started.ipynb  README.md  beam-search-with-cayleypy.ipynb  benchmark-bfs-in-cayleypy-on-gpu-p100.ipynb  benchmark-versions-of-bfs-in-cayleypy.ipynb  cayleypy-demo.ipynb  computing-spectra-of-cayley-graphs-using-cayleypy.ipynb  growth-function-for-lx-cayley-graph.ipynb  jax_optimization_benchmark.ipynb  library-of-puzzles-in-gap-format-in-cayleypy.ipynb  lrx-binary-with-cayleypy-bfs-only.ipynb  lrx-cayleypy-rl-no-pretr-mdqn-rand-permn-gen-n52-lr1e-7.ipynb  lrx-solution-n-32-beamsearch.ipynb  lrx-solution.ipynb  solve-lrx-binary-with-cayleypy.ipynb
tests/: test_dependency_manager.py  test_installation_dependencies.py  test_jax_bfs.py  test_jax_cayley_graph.py  test_jax_device_integration.py  test_jax_device_manager.py  test_jax_generators.py  test_jax_hasher.py  test_jax_string_encoder.py  test_jax_tensor_ops.py
