[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "cayleypy"
version = "0.1.0"
description = "Library for studying Cayley graphs and Schreier coset graphs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "CayleyPy Foundation" }]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
]

# https://peps.python.org/pep-0508/
dependencies = [
    "h5py",
    "kagglehub",
    "numba",
    "numpy",
    "scipy",
]

# Development dependencies
# pip install .[torch,jax,jax-gpu,jax-tpu,lint,test,dev,docs]
[project.optional-dependencies]
torch = [
    # torch is required, but it is optional here because if it is  in dependencies,
    # Kaggle would spend several minutes installing some dependencies, even though
    # it has torch installed.
    "torch"
]
jax = [
    # JAX and Flax NNX for CPU acceleration (base installation)
    "jax>=0.4.20",
    "flax>=0.10.0",
    "optax>=0.2.0",
]
jax-gpu = [
    # JAX with CUDA support for GPU acceleration
    "jax[cuda12]>=0.4.20",
    "flax>=0.10.0",
    "optax>=0.2.0",
]
jax-tpu = [
    # JAX with TPU support for TPU acceleration
    "jax[tpu]>=0.7.0",
    "flax>=0.10.0",
    "optax>=0.2.0",
]
lint = [
    "black",
    "mypy==1.15.0",
    "pylint"
]
test = [
    "pytest",
    "pytest-benchmark",
]
dev = [
    "coverage",
    "networkx",
    "setuptools",
]
docs = [
    # Libraries needed to build documentation.
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_markdown_parser",
]

[project.urls]
"Homepage" = "https://github.com/cayleypy/cayleypy"
"Documentation" = "https://cayleypy.github.io/cayleypy-docs/api.html"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cayleypy*"]
exclude = ["notebooks*"]

[tool.setuptools.package-data]
"cayleypy" = ["data/*.csv", "puzzles/gap_files/**"]

[[tool.mypy.overrides]]
module = ["networkx.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["tensorflow.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["numba.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["h5py.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["kagglehub.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["jax.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["flax.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["optax.*"]
ignore_missing_imports = true

[tool.pylint."FORMAT"]
max-line-length = 120
[tool.pylint."MESSAGES CONTROL"]
disable = [
    "consider-using-enumerate",
    "consider-using-f-string",
    "fixme",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-statements",
]

[tool.black]
line-length = 120
